# sedish-fhir-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  config.template.yaml  config.yaml  docker-entrypoint.sh  external_models.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audits/: assert_observation_has_subject.sql  assert_patient_has_identifier.sql
documentation/: verify-identifier-types.sql
documentation/domains/: encounter.md  observation.md  patient.md
examples/: README.md  allergy-intolerance.json  condition.json  encounter.json  medication-request.json  observation.json  patient-no-national-id.json  patient.json  shr-transaction-bundle.json
loader/: cdc_stream.py  push_to_openhim.py  reconcile.py  run_continuous.sh  run_kafka.py  sync_source.py
loader/tests/: test_push_to_openhim.py  test_reconcile.py  test_run_kafka.py  test_sync_source.py
models/: ref_identifier_systems.sql
models/fhir/: allergy_intolerance.sql  condition.sql  encounter.sql  location.sql  medication_request.sql  observation.sql  patient.sql
models/sources/: concept_name.sql  encounter_openmrs.sql  national_fingerprint_mapping.sql  obs_openmrs.sql  patient_identifier_openmrs.sql  patient_openmrs.sql  person_address_openmrs.sql  person_name_openmrs.sql  person_openmrs.sql
schema/: consolidated_db_schema.sql
seeds/: concept_name.csv  encounter_openmrs.csv  national_fingerprint_mapping.csv  obs_openmrs.csv  patient_identifier_openmrs.csv  patient_openmrs.csv  person_address_openmrs.csv  person_name_openmrs.csv  person_openmrs.csv  ref_identifier_systems.csv
tests/: test_fhir_patient.yaml
(+4 files in other folders)
