[project]
name = "consolidated-fhir-mapper"
version = "0.1.0"
description = "Map the consolidated OpenMRS DB to FHIR (OpenCR + SHR) with SQLMesh. MySQL-only."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymysql>=1.1.1",
    "sqlmesh>=0.235",
    "kafka-python>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "sqlmesh[web]>=0.235",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["loader/tests"]
