[project]
name = "sedish-fhir-pipeline"
version = "0.1.0"
description = "FHIR R4 transformation and load pipeline for the SEDISH Haiti HIE. Maps consolidated OpenMRS data to OpenCR (MPI) and SHR via OpenHIM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymysql>=1.1.1",
    "sqlmesh>=0.235",
    "kafka-python>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "sqlmesh[web]>=0.235",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["loader/tests"]
